# LeicPlan

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  main.cpp
cpps/: Estudante.cpp  GestaoHorario.cpp  Pedido.cpp  Slot.cpp  Sort.cpp  THorario.cpp  UCTurma.cpp  Vaga.cpp
docs/: Doxyfile
docs/output/html/: _estudante_8h_source.html  _gestao_horario_8h_source.html  _pedido_8h_source.html  _slot_8h_source.html  _sort_8h_source.html  _t_horario_8h_source.html  _u_c_turma_8h_source.html  _vaga_8h_source.html  annotated.html  class_estudante-members.html  class_estudante.html  class_gestao_horario-members.html  class_gestao_horario.html  class_pedido-members.html  class_pedido.html  class_slot-members.html  class_slot.html  class_sort-members.html  class_sort.html  class_t_horario-members.html  class_t_horario.html  class_u_c_turma-members.html  class_u_c_turma.html  class_vaga-members.html  class_vaga.html  classes.html  dir_3a8feefd1cb361d121d387a3d880dbce.html  dir_5261fe086a517075258cd97f85ef51c2.html  dir_6258648ba015f55c2e65cb01bea2e7f2.html  dir_7f57b1e41c5acd0e859ae5f3a2b075a9.html  dir_95e29a8b8ee7c54052c171a88bb95675.html  dir_c840fe33e41efafd09f6df2823d380b3.html  dir_d1ec42f4206b328a67521a46cc2592cf.html  dir_e4db62497e01360de151742c4c9ede63.html  dir_f89abcb304c928c7d889aa5625570de5.html  files.html  functions.html  functions_func.html  globals.html  globals_func.html  (+3 more)
docs/output/html/search/: all_2.js  all_3.js  all_7.js  all_8.js  all_9.js  all_b.js  (+15 more)
headers/: Estudante.h  GestaoHorario.h  Pedido.h  Slot.h  Sort.h  THorario.h  UCTurma.h  Vaga.h
